crates/swc/tests/tsc-references/callSignaturesThatDifferOnlyByReturnType2_es2015.1.normal.js
var x;
// BUG 822524
var r = x.foo(1); // no error
var r2 = x.foo(''); // error
